[project]
name = "terraform-aws-apprunner"
version = "0.1.0"
description = ""
authors = [
    {name = "Traey Hatch",email = "4763901+trejas@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pre-commit (>=4.2.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
